updated demos menu, due to admin only being allowed to record demos, also added consize to settings menu.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3296 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -5,7 +5,7 @@ newmenu main
 menuitem "Multiplayer"			"showmenu multiplayer"
 menuitem "Singleplayer"			"showmenu singleplayer"
 menuitem "Settings"			"showmenu settings"
-menuitem "Demo"				"demomenu"
+menuitem "Demo"				[ showmenu "Play demo" ]
 menuitem "Editing" 			"showmenu editing"
 menuitem "Help"				"showmenu help"
 menuitem "About"			"showmenu about"
