--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -13,7 +13,7 @@ menuitem "Set mode/map"			"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
-menuitem "Demos"			"demomenu"
+menuitem "Download a demo"		[ showmenu "Download demo" ]
 menuitem "" -1
 menuitem "3Disconnect"			"disconnect"
 menuitem "2Go back to Main Menu"	"showmenu main"
@@ -32,7 +32,7 @@ menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
 menuitem "Change to the enemy team"        "changeteam"
 menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "Demos"			"demomenu"
+menuitem "Demos"			"showmenu Demo"
 menuitem "" -1
 menuitem "3Disconnect"			"disconnect"
 menuitem "2Go back to Main Menu"	"showmenu main"
