--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -316,6 +316,7 @@ menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "reducedviolencemode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
+menuitemslider "Console size: " 0 20 "$consize" 1 "" "consize $arg1"
 
 // Reduced game violence mode...
 alias reducedviolencemode [
