ac_desert3 updates
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3298 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_desert3.cfg
+++ b/ac/packages/maps/ac_desert3.cfg
@@ -314,6 +314,7 @@ texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"
 texture 0 "./makke/brickwall.jpg"
 texture 0 "./dog/texture08.jpg"
+texture 0 "./craig_fortune/crates/light_weathered_desert3.jpg"
 // Ambient Sounds
 mapsoundreset
 
