added ambience sounds
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3303 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -99,7 +99,7 @@ mapmodel 1 8 0 0 "toca/corrugated/beam"		// 66	For use with corrugated fence (Mo
 mapmodel 1 4 0 0 "toca/guardrail"		// 67 	Clip this with nothing mapmodels
 mapmodel 1 4 0 0 "toca/guardrail2"		// 68  	Use guardrail2 with this (Model 106)
 mapmodel 0 0 0 0 "toca/milkcarton"		// 69
-mapmodel 0 0 0 0 "toca/monitor"			// 70
+mapmodel 1 1 0 0 "toca/monitor"			// 70
 mapmodel 2 3 0 0 "toca/officedesk"		// 71  	Clip this with nothing mapmodels
 mapmodel 0 0 0 0 "toca/plasmatv"		// 72
 mapmodel 4 1 0 0 "toca/platformmet"		// 73
@@ -595,3 +595,7 @@ mapsound "./ambience/t_keyboard.ogg" 1		//35 play only once when user gets near 
 mapsound "./ambience/t_factory01.ogg" -1	//36
 mapsound "./ambience/t_vents.ogg" -1		//37
 mapsound "./ambience/t_waterfront.ogg" -1	//38
+mapsound "./ambience/t_generator.ogg" -1	//39
+mapsound "./ambience/t_electricbuzz.ogg" -1	//40
+mapsound "./ambience/t_alarm01.ogg" -1		//41
+
