--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -126,7 +126,7 @@ menuitem "2		   [ OK ]" "watercolour $redw $greenw $bluew"
 //Mapmodels
 newmenu Mapmodels
 
-menuitem "Platforms/Clips"	"showmenu Platforms"
+menuitem "Platforms"	"showmenu Platforms"
 menuitem "Ladders/Stairs"	"showmenu Ladders/Stairs"
 menuitem "Fencing"		"showmenu Fencing"
 menuitem "Plants"     		"showmenu Plants"
