--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -28,11 +28,12 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 
 newmenu settings
 	
-menuitem "Video settings"                                         "showmenu video"
-menuitem "Head-Up Display settings"                               "showmenu HUD"
-menuitem "Input controls"                     	           "showmenu controls"
-menuitem "Sound settings"                                         "showmenu sound"
-menuitem "Gameplay settings"                                 "showmenu gameplay"
+menuitem "Video settings"					"showmenu video"
+menuitem "Head-Up Display settings"				"showmenu HUD"
+menuitem "Gameplay settings"					"showmenu gameplay"
+menuitem "Input controls"					"showmenu controls"
+menuitem "Sound settings"					"showmenu sound"
+menuitem "Misc settings"					"showmenu Misc"
 menuitem "" -1
 menuitem "Reset all settings"                          [ showmenu "Reset settings" ]
 
@@ -307,12 +308,14 @@ newmenu gameplay
 menuitemtextinput "Nickname:			 " "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
 menuitem "" -1
+menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitem "Change to the enemy team" "changeteam"
 menuitem "Change weapon"        "showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "" -1
+
+newmenu Misc
+
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
-menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "reducedviolencemode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
@@ -354,17 +357,6 @@ menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "Change crosshair...				"	  "showmenu Crosshairs"
 
-newmenu Crosshairs
-
-menuinit [ alias crosshairweapon "" ]
-menuitem "Select the weapon you would like to change the crosshair for:" -1
-menuitem "" -1
-//menuitem "Default (all weapons)"          [ alias crosshairweapon -1; showmenu "Crosshair type" ]
-menuitem "MTP-57 Assault Rifle"		      [ alias crosshairweapon 5; showmenu "Crosshair type" ]  
-menuitem "A-ARD/10 Submachine Gun"	      [ alias crosshairweapon 3; showmenu "Crosshair type" ] 
-menuitem "Precision Tech AD-81 Sniper Rifle"  [ alias crosshairweapon 4; showmenu "Crosshair type" ]  
-menuitem "V-19 Combat Shotgun"		      [ alias crosshairweapon 2; showmenu "Crosshair type" ]
-
-newmenu "Crosshair type"
-menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png) $crosshairweapon" 1
+newmenu "Crosshairs"
+menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)" 1
 
