--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -74,7 +74,7 @@ menuitem "2		     [ OK ]" "newent clip $clip01 $clip02 $clip03 $clip04"
 newmenu Pickups
 
 menuitem "Health"		"newent health"
-menuitem "Pistol Magazine"	"newent clips"
+menuitem "Pistol Magazine"	"newent pistol"
 menuitem "Box of Ammo"		"newent ammobox"
 menuitem "Kevlar Vest"		"newent armour"
 menuitem "Akimbo"		"newent akimbo"
