Ambient sounds menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3334 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -4,6 +4,7 @@ menuitem "Mapmodels..."				"showmenu Mapmodels"
 menuitem "Lighting..."				"showmenu Lighting"
 menuitem "Entities..."				"showmenu Entities"
 menuitem "Pickups..."				"showmenu Pickups"
+menuitem "Ambient sounds..."			[ showmenu "Ambient sounds" ]
 menuitem "Arches and slopes..."			"showmenu Arches"
 menuitem "Map operations..."			[ showmenu "Map operations" ]
 menuitem "Bots..."				[ showmenu "Creating bot waypoints" ]
@@ -291,3 +292,62 @@ menuitem "Coffee"               "newent mapmodel 53"
 menuitem "Flyer"                "newent mapmodel 54"
 menuitem "Tree Flyer"     	"newent mapmodel 26"
 menuitem "Potato box"		"newent mapmodel 56"
+
+
+newmenu "Ambient sounds"
+
+menuinit [ alias ambientsoundmenu "" ]
+menuitem "Cave drip"				[ alias ambientsoundmenu 0; showmenu "Ambient sound settings" ]
+menuitem "Cars driving in the distance"		[ alias ambientsoundmenu 1; showmenu "Ambient sound settings" ]
+menuitem "Humm (01)"				[ alias ambientsoundmenu 2; showmenu "Ambient sound settings" ]
+menuitem "Humm (02)"				[ alias ambientsoundmenu 3; showmenu "Ambient sound settings" ]
+menuitem "Crickets at night"			[ alias ambientsoundmenu 4; showmenu "Ambient sound settings" ]
+menuitem "Water (01)"				[ alias ambientsoundmenu 5; showmenu "Ambient sound settings" ]
+menuitem "Wind"					[ alias ambientsoundmenu 6; showmenu "Ambient sound settings" ]
+menuitem "Air conditioner"			[ alias ambientsoundmenu 7; showmenu "Ambient sound settings" ]
+menuitem "Compressor"				[ alias ambientsoundmenu 8; showmenu "Ambient sound settings" ]
+menuitem "Crow"					[ alias ambientsoundmenu 9; showmenu "Ambient sound settings" ]
+menuitem "Dogs (01)"				[ alias ambientsoundmenu 10; showmenu "Ambient sound settings" ]
+menuitem "Helicopter"				[ alias ambientsoundmenu 11; showmenu "Ambient sound settings" ]
+menuitem "Humm (03)"				[ alias ambientsoundmenu 12; showmenu "Ambient sound settings" ]
+menuitem "Humm (04)"				[ alias ambientsoundmenu 13; showmenu "Ambient sound settings" ]
+menuitem "Humm (05)"				[ alias ambientsoundmenu 14; showmenu "Ambient sound settings" ]
+menuitem "Humm (06)"				[ alias ambientsoundmenu 15; showmenu "Ambient sound settings" ]
+menuitem "Dogs (02)"				[ alias ambientsoundmenu 16; showmenu "Ambient sound settings" ]
+menuitem "Night (01)"				[ alias ambientsoundmenu 17; showmenu "Ambient sound settings" ]
+menuitem "Night (02)"				[ alias ambientsoundmenu 18; showmenu "Ambient sound settings" ]
+menuitem "Radio comms"				[ alias ambientsoundmenu 19; showmenu "Ambient sound settings" ]
+menuitem "Radio static"				[ alias ambientsoundmenu 20; showmenu "Ambient sound settings" ]
+menuitem "Sat-coms"				[ alias ambientsoundmenu 21; showmenu "Ambient sound settings" ]
+menuitem "Sludge"				[ alias ambientsoundmenu 22; showmenu "Ambient sound settings" ]
+menuitem "Static (01)"				[ alias ambientsoundmenu 23; showmenu "Ambient sound settings" ]
+menuitem "Static (02)"				[ alias ambientsoundmenu 24; showmenu "Ambient sound settings" ]
+menuitem "Vent (01)"				[ alias ambientsoundmenu 25; showmenu "Ambient sound settings" ]
+menuitem "Vent (02)"				[ alias ambientsoundmenu 26; showmenu "Ambient sound settings" ]
+menuitem "Water owl"				[ alias ambientsoundmenu 27; showmenu "Ambient sound settings" ]
+menuitem "Water (02)"				[ alias ambientsoundmenu 28; showmenu "Ambient sound settings" ]
+menuitem "Water drip"				[ alias ambientsoundmenu 29; showmenu "Ambient sound settings" ]
+menuitem "Wind (02)"				[ alias ambientsoundmenu 30; showmenu "Ambient sound settings" ]
+menuitem "Waterpipes (01)"			[ alias ambientsoundmenu 31; showmenu "Ambient sound settings" ]
+menuitem "Waterpipes (02)"			[ alias ambientsoundmenu 32; showmenu "Ambient sound settings" ]
+menuitem "Warning alarm"			[ alias ambientsoundmenu 33; showmenu "Ambient sound settings" ]
+menuitem "Gastank"				[ alias ambientsoundmenu 34; showmenu "Ambient sound settings" ]
+menuitem "Keyboard"				[ alias ambientsoundmenu 35; showmenu "Ambient sound settings" ]
+menuitem "Factory"				[ alias ambientsoundmenu 36; showmenu "Ambient sound settings" ]
+menuitem "Vent (03)"				[ alias ambientsoundmenu 37; showmenu "Ambient sound settings" ]
+menuitem "Waterfront"				[ alias ambientsoundmenu 38; showmenu "Ambient sound settings" ]
+menuitem "Generator"				[ alias ambientsoundmenu 39; showmenu "Ambient sound settings" ]
+menuitem "Electric buzz"			[ alias ambientsoundmenu 40; showmenu "Ambient sound settings" ]
+menuitem "Alarm"				[ alias ambientsoundmenu 41; showmenu "Ambient sound settings" ]
+
+
+alias soundrad 1
+alias soundsize 0
+alias ambientsoundvol 255
+
+newmenu "Ambient sound settings"
+menuinit [ alias soundrad 1; alias soundsize 0; alias ambientsoundvol 255 ]
+menuitemslider "Sound radius: " 1 25 "$soundrad" 1 "" "alias soundrad $arg1"
+menuitemslider "Sound size: " 0 25 "$soundsize" 1 "" "alias soundsize $arg1"
+menuitemslider "Sound volume: " 1 255 "$ambientsoundvol" 5 "" "alias ambientsoundvol $arg1"
+menuitem "2		   [ OK ]" "newent sound $ambientsoundmenu $soundrad $soundsize $ambientsoundvol"
