demo -> singleplayer fix
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3337 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -47,7 +47,12 @@ alias afterdisconnect [
     if $connected [
         alias mapstartonce $arg1
         disconnect
-    ] $arg1
+    ] [
+        if (watchingdemo) [
+            alias mapstartonce $arg1
+            stopdemo
+        ] $arg1
+    ]
 ]
 
 // register events and change map
