experimental models removed
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3347 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -134,7 +134,7 @@ mapmodel 4 1 0 0 "toca/platformmet"		//101
 mapmodel 4 1 7 0 "toca/stairs1"			//102
 mapmodel 4 1 7 0 "toca/stairs2"			//103
 
-mapmodel 2 1 0 0 "nothing"			//104 stairs clipping xxxxxxxxxxxxxxxxxxx
+mapmodel 0 0 0 0 "nothing"			//104 --------
 
 mapmodel 1 1 0 0 "toca/cinderblock"		//105
 mapmodel 1 8 0 0 "toca/corrugated/fence1"	//106
@@ -167,9 +167,9 @@ mapmodel 2 1 0 0  "toca/servercluster/U6_1"	//130 U6 = 2 cubes high
 mapmodel 2 1 0 0  "toca/servercluster/U6_2"	//131
 mapmodel 2 1 0 0  "toca/servercluster/U6_3"	//132
 
-mapmodel 0 0 0 0  "toca/backdrop1"		//133
-mapmodel 0 0 0 0  "toca/backdrop2"		//134
-mapmodel 0 0 0 0  "toca/backdrop3"		//135
+mapmodel 0 0 0 0  "toca/nothing"		//133 --------
+mapmodel 0 0 0 0  "toca/nothing"		//134 --------
+mapmodel 0 0 0 0  "toca/nothing"		//135 --------
 
 mapmodel 0 0 0 0  "toca/window1"		//136
 mapmodel 0 0 0 0  "toca/barbwire"		//137
