new mouse- & scopesens handling in menus
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3349 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -13,7 +13,14 @@ lighterror 4 //set higher (for example 8) if you experience slowdown
 // if you want to set your own value for it, go to the following line and 
 // replace (div $sensitivity 2) by your desired sensitivity value:
 
-alias scopesens [div $sensitivity 2]
+//alias scopesens [div $sensitivity 2]
+alias scopesensdiv 3
+alias scopesensmul 2
+//alias scopesens [
+//	echo (concatword $scopesensmul "/" $scopesensdiv "=" (* (div $sensitivity $scopesensdiv) $scopesensmul))
+//	result (* (div $sensitivity $scopesensdiv) $scopesensmul)
+//]
+alias scopesens [ result (* (div $sensitivity $scopesensdiv) $scopesensmul) ]
 
 //bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
 
