--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -42,11 +42,50 @@ newmenu "QUICK setup"
 menuitemtextinput "Nickname:				" 		"" "name $arg1"
 menuitemtextinput "Resolution (Width):			" "$scr_w" "scr_w $arg1"
 menuitemtextinput "Resolution (Height):			" "$scr_h" "scr_h $arg1"
-menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitem "Mouse Sensitivity"                "openmousemenu"
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
 menuitem "2			  [ OK ]" "resetgl"
+
+openmousemenu = [
+	alias mousesensmenus "10 100"
+	alias msmx (findlist $mousesensmenus $sensitivityscale)
+	if (= $msmx -1) [showmenu "mouse sensitivity odd"] [showmenu (concat mouse sensitivity $sensitivityscale)]
+]
+
+closemousemenu = [
+	closemenu "mouse sensitivity 10"
+	closemenu "mouse sensitivity 100"
+	closemenu "mouse sensitivity odd"
+]
+
+//closemousemenu = [closemenu (concat mouse sensitivity $sensitivityscale)]
+togglemousemenu = [
+	closemousemenu
+	openmousemenu
+]
+
+newmenu "mouse sensitivity odd"
+menuitemtextinput "MouseSens: " "($sensitivity)" [sensitivity $arg1;togglemousemenu] 
+menuitemtextinput "SensScale: " "($sensitivityscale)" [sensitivityscale $arg1;togglemousemenu] 
+menuitemtextinput "ZoomSens MULby: " "($scopesensmul)" [alias scopesensmul $arg1;togglemousemenu] 
+menuitemtextinput "ZoomSens DIVby: " "($scopesensdiv)" [alias scopesensdiv $arg1;togglemousemenu] 
+menuitemtextinput "ZoomSens Value: " "(scopesens)" [echo "read only - use the input-fields for MUL and DIV"]
+
+newmenu "mouse sensitivity 10"
+menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitemslider "Mouse sensscale: " 10 100 "($sensitivityscale)" 90 "" [sensitivityscale $arg1;if (= $sensitivityscale 10) [sensitivity 30] [sensitivity 300];togglemousemenu]
+menuitemslider "ZoomSens MULby: " 1 6 "($scopesensmul)" 1 "" [alias scopesensmul $arg1;togglemousemenu] 
+menuitemslider "ZoomSens DIVby: " 1 6 "($scopesensdiv)" 1 "" [alias scopesensdiv $arg1;togglemousemenu] 
+menuitemtextinput "ZoomSens Value: " "(scopesens)" [echo "read only - use the sliders"]
+
+newmenu "mouse sensitivity 100"
+menuitemslider "Mouse sensitivity: " 20 1500 "($sensitivity)" 5 "" "sensitivity $arg1"
+menuitemslider "Mouse sensscale: " 10 100 "($sensitivityscale)" 90 "" [sensitivityscale $arg1;if (= $sensitivityscale 10) [sensitivity 30] [sensitivity 300];togglemousemenu]
+menuitemslider "ZoomSens MULby: " 1 6 "($scopesensmul)" 1 "" [alias scopesensmul $arg1;togglemousemenu] 
+menuitemslider "ZoomSens DIVby: " 1 6 "($scopesensdiv)" 1 "" [alias scopesensdiv $arg1;togglemousemenu] 
+menuitemtextinput "ZoomSens Value: " "(scopesens)" [echo "read only - use the sliders"]
 
 alias getgfxq [
     if (= $minlod 200) [ result 4 ] [
@@ -198,7 +237,8 @@ menuitemkeyinput "Map overview: "   toggleshowmap
 menuitemkeyinput "Drop CTF flag: "  dropflag
 menuitem "" -1
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
-menuitemslider "Mouse sensitivity: " 3 150 "($sensitivity)" 3 "" "sensitivity $arg1"
+//menuitemslider "Mouse sensitivity: " 3 150 "($sensitivity)" 3 "" "sensitivity $arg1"
+menuitem "Mouse sensitivity"        "openmousemenu"
 menuitem "" -1
 menuitem "Reset keybinds to default settings..." [ showmenu "Reset Binds" ]
 
