--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -9,18 +9,12 @@ autoreload 1			// Reload the guns automatically by default.
 
 lighterror 4 //set higher (for example 8) if you experience slowdown
 
-// NOTE: by default the zoom script just divides your sensitivity by 2 while you use the scope
+// NOTE: by default the zoom script just divides your sensitivity by 1.5 while you use the scope
 // if you want to set your own value for it, go to the following line and 
-// replace (div $sensitivity 2) by your desired sensitivity value:
+// replace $scopesensscale by your desired sensitivity value:
 
-//alias scopesens [div $sensitivity 2]
-alias scopesensdiv 3
-alias scopesensmul 2
-//alias scopesens [
-//	echo (concatword $scopesensmul "/" $scopesensdiv "=" (* (div $sensitivity $scopesensdiv) $scopesensmul))
-//	result (* (div $sensitivity $scopesensdiv) $scopesensmul)
-//]
-alias scopesens [ result (* (div $sensitivity $scopesensdiv) $scopesensmul) ]
+alias scopesensscale 0.666
+alias scopesens [ *f $sensitivity $scopesensscale ]
 
 //bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
 
