bugfix. very last change to the menus
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3357 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -169,7 +169,7 @@ alias new_sound_quality [
 newmenu "Reset settings"
 menuinit [ alias resetyes 0 ] // Ensures this menu works correctly.
 menuitemcheckbox "Yes, reset all settings: " "alias resetyes 1" "alias resetyes $arg1" 
-menuitem "2   	  [ Apply! ]		" [ if $resetyes [ resesresetcfg 1; quit ] [ showmenu "" ] ] [ echo "3If the above option is ticked, AssaultCube will now quit and your settings will be reset." ] //If checkbox is ticked, reset settings and quit, otherwise, close menus.
+menuitem "2   	  [ Apply! ]		" [ if $resetyes [ resetcfg 1; quit ] [ showmenu "" ] ] [ echo "3If the above option is ticked, AssaultCube will now quit and your settings will be reset." ] //If checkbox is ticked, reset settings and quit, otherwise, close menus.
 	
 
 newmenu controls
