mapediting guide is complete.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3389 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -131,6 +131,7 @@ menuitem "absinth				Packaging AssaultCube for Mac." -1
 menuitem "dtd				Hosting." -1
 menuitem "Grenadier (aurhat)		Small code contributions/fixes." -1
 menuitem "KanslozeClown			Code contributions and advice." -1
+menuitem "Chris Robinson		OpenAL-Soft advice." -1
 menuitem "" -1
 menuitem "Resources" -1 
 menuitem "-----------" -1
