proper vsync slider in the menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3398 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -222,7 +222,7 @@ menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
 
 
 menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
-menuitemcheckbox "Vsync: " "$vsync" "vsync $arg1"
+menuitemslider "Vsync: " -1 1 "$vsync" 1 "default disabled enabled" "vsync $arg1"
 menuitem "" -1
 menuitem "Advanced video settings..."	[ showmenu "Advanced video settings" ]
 
