a less annoying in-game menu, by making disconnect menuitem behave better.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3412 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,6 +1,18 @@
 // Decides whether to open the admin or normal in-game menu.
 alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-game ] ]
 
+// Disconnects, closes in-game menus, opens other menus as normal, and then shows server browser.
+alias gamemenudisconnect [ disconnect
+		closemenu In-game 
+		closemenu "In-game admin"
+		showmenu main
+		showmenu multiplayer
+		searchlan 1
+		showallservers 1
+		updatefrommaster
+		showmenu server
+	]
+
 // Normal in-game menu that opens when pressing escape and connected to a game.
 newmenu "In-game"
 
@@ -12,10 +24,9 @@ menuitem "" -1
 menuitem "Set mode/map"			"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
-menuitem "Change mastermode" 		"showmenu Mastermode"
 menuitem "Download a demo"		[ showmenu "Download demo" ]
 menuitem "" -1
-menuitem "3Disconnect"			"disconnect"
+menuitem "3Disconnect"			"gamemenudisconnect"
 menuitem "2Go back to Main Menu"	"showmenu main"
 
 
@@ -34,8 +45,8 @@ menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"showmenu Demo"
 menuitem "" -1
-menuitem "3Disconnect"			"disconnect"
-menuitem "2Go back to Main Menu"	"showmenu main"
+menuitem "3Disconnect"			"gamemenudisconnect"
+menuitem "2Go back to Main Menu"	"showmenu main" 
 
 
 // Multiplayer menu only opens through the main menu (when disconnected).
@@ -77,9 +88,9 @@ menuitem "Remove all bans"	"removebans"
 
 newmenu "Team adjustment"
 
-menuitem "Force a team change"		[ showmenu "force team" ]
-menuitem "Initiate autoteam"		[ showmenu "Auto-adjust teams" ]
 menuitem "Initiate shuffleteams"	"shuffleteams"
+menuitem "Force a team change"		[ showmenu "force team" ]
+menuitem "Initiate autoteam"		"showmenu Auto-team"
 
 newmenu Gamemode
 
@@ -102,7 +113,7 @@ newmenu Mastermode
 menuitem "Unlock the server (open)"		"mastermode 0"
 menuitem "Lock the server (private)"		"mastermode 1"
 
-newmenu "Auto-adjust teams"
+newmenu Auto-team
 
 menuitem "Turn auto-team on"	"autoteam 1"
 menuitem "Turn auto-team off"	"autoteam 0"
