--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -26,8 +26,8 @@ menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Download a demo"		[ showmenu "Download demo" ]
 menuitem "" -1
-menuitem "3Disconnect"			"gamemenudisconnect"
-menuitem "2Go back to Main Menu"	"showmenu main"
+menuitem "3Disconnect"		"gamemenudisconnect"
+menuitem "2Go back to Main Menu"	"closemenu In-game; showmenu main"
 
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
@@ -45,8 +45,8 @@ menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"showmenu Demo"
 menuitem "" -1
-menuitem "3Disconnect"			"gamemenudisconnect"
-menuitem "2Go back to Main Menu"	"showmenu main" 
+menuitem "3Disconnect"		"gamemenudisconnect"
+menuitem "2Go back to Main Menu"	[ closemenu "In-game admin"; showmenu main ]
 
 
 // Multiplayer menu only opens through the main menu (when disconnected).
