--- a/ac/packages/maps/model_evaluation.cfg
+++ b/ac/packages/maps/model_evaluation.cfg
@@ -165,6 +165,33 @@ mapmodel 4 1 15 0  "toca/guardtower"		// 131
 mapmodel 0 2 0 0  "toca/treetrunk1"		// 132
 
 
+alias thisisacomment [
+
+This is Randum's opinion on the models:
+
+63 - Should be a darker cream colour than plain white.
+70 - Should be animated or in a "turned off" state... the tv looks weird otherwise.
+74 - The "meter" part of it should be pushed in by half... it looks strange, sticking out like that.
+81 - Too bright, make the yellow a bit darker.
+82 - Too bright, make the yellow a bit darker.
+84 - Looks weird, too wrinkly... like carpet.... you need less wrinkles for this garbage bag.
+86 - Should be animated or in a "turned off" state... looks weird otherwise.
+87 - table top should be a bit darker
+ 
+Models 95 through to 99 - Needs to be a bit darker/rougher...
+ 
+101 - It has a shiny bit on it that looks weird, on the window part...
+108 - End of the pipe doesn't look realistic enough.. suggest a bigger "dark part" on the end of it.
+110 - front of the pipe looks weird... suggest a small indent, and a less blury texturing.
+114 - needs more branches and better texturing... this model isn't very good
+116 - as above..  this model isn't very good.
+121 - Top of the tree ends strangely... the trunk part
+125 - CD drive looks strangely oversized (stretched?)
+131 - wood needs to be darker by default..
+
+]
+
+
 
 // The models below are specific to the maps that they were made for and won't be of much or any use in other maps.
 // But you can activate those mapmodels if you must, by using a config file and uncommenting the ones you need below.
