--- a/ac/packages/maps/ac_toxic.cfg
+++ b/ac/packages/maps/ac_toxic.cfg
@@ -1,4 +1,4 @@
-// Toxicity - By RandumIdiot
+// Toxicity - By RandumKiwi
 // Toxicity is licensed under "Attribution-Noncommercial-No Derivative Works 3.0 Unported" creative commons.
 // http://creativecommons.org/licenses/by-nc-nd/3.0/
 // Attribution is not needed if distributed as part of the AssaultCube package, as credit is already given.
