--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -91,7 +91,7 @@ alias oldsens $sensitivity
 
 alias zoom [
     if (= $arg1 1) [
-        if (= $sensitivity $scopesens) [] [
+        if (=f $sensitivity (scopesens)) [] [
             alias oldsens $sensitivity
             sensitivity (scopesens)
             setscope  1
@@ -101,7 +101,6 @@ alias zoom [
         setscope 0
     ]
 ]
-
 
 alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
 alias delta_spect_0 [ changefollowplayer $arg1 ]
