fps range menu fixes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3454 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -282,11 +282,11 @@ menuitem "2			  [ Apply now! ]				" "resetgl"
 
 newmenu "FPS Range"
 
-menuitem "My 486 0wnz y00 	  (8-10 FPS)" "fpsrange 8 10"
-menuitem "Slow machine 		  (20-25 FPS)" "fpsrange 20 25"
-menuitem "Sensible default 	  (30-40 FPS)" "fpsrange 30 40"
-menuitem "FPS whore 		  (60-60 FPS)" "fpsrange 60 60"
-menuitem "I don't understand LOD (100+ FPS)" "fpsrange 100 1000"
+menuitem "My 486 0wnz y00 	  (8-10 FPS)" [closemenu "FPS Range"; fpsrange 8 10]
+menuitem "Slow machine 		  (20-25 FPS)" [closemenu "FPS Range"; fpsrange 20 25]
+menuitem "Sensible default 	  (30-40 FPS)" [closemenu "FPS Range"; fpsrange 30 40]
+menuitem "FPS whore 		  (60-60 FPS)" [closemenu "FPS Range"; fpsrange 60 60]
+menuitem "I don't understand LOD (100+ FPS)" [closemenu "FPS Range"; fpsrange 100 1000]
 
 newmenu sound
 
