--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -3,7 +3,8 @@
 
 name "unarmed"     		// Change your name!
 loadcrosshair default.png	// Choose another crosshair, see packages/misc/crosshairs/
-loadcrosshair red_dot.png 4 // scope crosshair
+loadcrosshair teammate.png teammate // teammate crosshair
+loadcrosshair red_dot.png scope // scope crosshair
 skin 0				// Change your look.
 autoreload 1			// Reload the guns automatically by default.
 
