--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -356,7 +356,11 @@ menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsi
 menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "Change crosshair...				"	  "showmenu Crosshairs"
+menuitem "Change scope crosshair...			"	  "showmenu [Scope crosshairs]"
 
 newmenu "Crosshairs"
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)" 1
+
+newmenu "Scope crosshairs"
+menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png) scope" 1
 
