--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -351,7 +351,8 @@ menuitemcheckbox "   Icons " "(= $hidehudequipment 0)" "hidehudequipment (= $arg
 menuitemcheckbox "   Console " "(= $hideconsole 0)" "hideconsole (= $arg1 0)"
 menuitemcheckbox "   Spectator info " "(= $hidespecthud 0)" "hidespecthud (= $arg1 0)"
 menuitemcheckbox "   Quick messages " "(= $hidehudmsgs 0)" "hidehudmsgs (= $arg1 0)"
-menuitemcheckbox "   Damage indicator " "(= $hidedamageindicator 0)" "hidedamageindicator (= $arg1 0)"
+menuitemcheckbox "   Damage direction indicator " "(= $hidedamageindicator 0)" "hidedamageindicator (= $arg1 0)"
+menuitemcheckbox "   Damage screen flash	" "$damagescreen" "damagescreen $arg1"
 menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsign $arg1"
 menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
