--- a/ac/config/serverblacklist.cfg
+++ b/ac/config/serverblacklist.cfg
@@ -1,11 +1,13 @@
-// server blacklist file
+// Server Blacklist
+// ================
 // WARNING: You can NOT use CubeScript in here!!
 
-// the following schemes are accepted
-// 1.2.3.4             // ban single IP
-// 1.2.3.4/24          // ban IP range 1.2.3.0-1.2.3.255
-// 1.2.3.4 - 2.3.4.5   // ban IP range
-//
-// hint: sed 's!#!//!g' old_blacklist.txt > new_blacklist.cfg
+// The following schemes are accepted...
+
+// 1.2.3.4		= Ban a single IP.
+// 1.2.3.4/24		= Ban an IP block (1.2.3.4 - 1.2.4.3)
+// 1.2.3.4 - 2.3.4.5	= Ban an IP range.
+
+// Hint: sed 's!#!//!g' old_blacklist.txt > new_blacklist.cfg
 
 
