--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,13 +1,21 @@
 // Decides whether to open the admin or normal in-game menu.
 alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-game ] ]
 
-// Disconnects, closes in-game menus, opens other menus as normal, and then shows server browser.
-alias gamemenudisconnect [ disconnect
+// Ask the player if he wants to disconnect when checking servers...
+newmenu "Disconnect?"
+
+menuitem "Yes" [ disconnect
 		closemenu In-game 
 		closemenu "In-game admin"
+		closemenu "Disconnect?"
 		showmenu main
 		showmenu multiplayer
-		searchlan 1
+		joinservermenu
+		] [ echo 3Disconnect from the current game first? ]
+menuitem "No"  [ closemenu "Disconnect?"; joinservermenu ]
+
+// "Join server" menu.
+alias joinservermenu [ searchlan 1
 		showallservers 1
 		updatefrommaster
 		showmenu server
@@ -26,10 +34,9 @@ menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Download a demo"		[ showmenu "Download demo" ]
 menuitem "" -1
-menuitem "2Go back to Main Menu"	"closemenu In-game; showmenu main"
-menuitem "3Disconnect"		"gamemenudisconnect"
-menuitem "3Quit AssaultCube" "showmenu quit"
-
+menuitem "4Main menu..."		[ closemenu In-game; showmenu main ]
+menuitem "4Browse the servers..."	[ showmenu "Disconnect?" ]
+menuitem "3Quit AssaultCube"		"savequit"
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
 newmenu "In-game admin"
@@ -46,14 +53,14 @@ menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"showmenu Demo"
 menuitem "" -1
-menuitem "2Go back to Main Menu"	[ closemenu "In-game admin"; showmenu main ]
-menuitem "3Disconnect"		"gamemenudisconnect"
-menuitem "3Quit AssaultCube" "quit"
+menuitem "4Main menu..."		[ closemenu "In-game admin"; showmenu main ]
+menuitem "4Browse the servers..."	[ showmenu "Disconnect?" ]
+menuitem "3Quit AssaultCube"		"savequit"
 
 // Multiplayer menu only opens through the main menu (when disconnected).
 newmenu multiplayer
 
-menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; showmenu server"
+menuitem "Join a server"		"joinservermenu"
 menuitem "Join a LAN server"		"searchlan 2; showallservers 0; showmenu server"
 menuitem "Custom connect"		[ showmenu "Custom connect" ]
 menuitem "Connect as Admin"		[ showmenu "Admin connect" ]
