crouch sound config
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3503 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -53,8 +53,8 @@ registersound "player/footsteps" 40 1 // S_FOOTSTEPS
 registersound "player/crouch" 40 1    // S_FOOTSTEPSCROUCH
 registersound "player/watersteps" 40 1  // S_WATERFOOTSTEPS
 registersound "player/watercrouch" 40 1 // S_WATERFOOTSTEPSCROUCH
-registersound "player/step"             // S_CROUCH !!FIXME, NEED NEW SOUND
-registersound "player/step"             // S_UNCROUCH !!FIXME, NEED NEW SOUND
+registersound "player/crouch_in"             // S_CROUCH
+registersound "player/crouch_out"             // S_UNCROUCH
 registersound "misc/menu_click1"        // S_MENUSELECT
 registersound "misc/menu_click2"        // S_MENUENTER
 registersound "player/underwater"       // S_UNDERWATER
