verbose maprot comments
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3515 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -5,6 +5,26 @@
 // map:mode:time:allowVote[:minplayer[:maxplayer]]
 // map will be skipped, if minplayer/maxplayer requirements are failed
 
+// map: map filename without extension
+//      do only use standard maps and maps from your packages/maps/servermaps folder
+
+// mode: Team Deathmatch (0), Deathmatch (2), Pistol Frenzy (6),
+//       Capture the Flag (5), Hunt the Flag (13), Keep the Flag (15), Team Keep the Flag (14),
+//       Team Survivor (4), Survivor (3), Last Swiss Standing (9),
+//       One Shot One Kill (10), Team One Shot One Kill (11)
+
+// time: game time in minutes, usually 15 minutes for flag modes, 10 minutes for all other modes
+
+// vote: (1) allow players to vote for other maps
+//       (0) only admin can change the map
+
+// minplayer: if set, the server will skip the map, if fewer than required players are connected
+
+// maxplayer: if set, the server will skip the map, if more than allowed players are connected
+
+// minplayer and maxplayer numbers are only checked when a new game is picked from the map rotation.
+// If the player number changes during gameplay, no action will be taken.
+
 // tdm
 ac_urban:0:15:1
 ac_keller:0:15:1
