fixing unavailable models by using "nothing" in CFGs
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3519 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_scaffold.cfg
+++ b/ac/packages/maps/ac_scaffold.cfg
@@ -63,9 +63,9 @@ mapmodel 3 7 0 0 "toca/radarconsole"
 mapmodel 1 7 0 0 "toca/commrack"		
 mapmodel 1 3 0 0 "toca/commrack2"		
 mapmodel 1 0 0 0 "toca/powermeter"		
-mapmodel 8 1 0 0 "toca/platform16"		
-mapmodel 1 3 0 0 "toca/steeldrum"		
-mapmodel 1 2 0 0 "toca/steeldrum2"		
+mapmodel 8 1 0 0 "nothing"		
+mapmodel 1 3 0 0 "nothing"		
+mapmodel 1 2 0 0 "nothing"		
 mapmodel 1 2 0 0 "toca/trashbag"		
 mapmodel 1 2 0 0 "toca/computer/pc"		
 mapmodel 1 2 0 0 "toca/computer/monkeymou"	
@@ -76,25 +76,25 @@ mapmodel 1 1 0 0 "toca/securitycam/vertmount"
 mapmodel 1 1 0 0 "toca/securitycam/wallmount"	
 mapmodel 1 1 0 0 "toca/securitycam/secucam"	
 mapmodel 4 1 0 0 "bridge"		
-mapmodel 1 8 0 0 "toca/wall"			
+mapmodel 1 8 0 0 "nothing"			
 mapmodel 0 0 0 0 "toca/guardrail"		
 mapmodel 1 3 0 0 "nothing"			
 mapmodel 1 4 0 0 "toca/guardrail2"		
 mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	
-mapmodel 2 1 0 0 "toca/tire"			
+mapmodel 2 1 0 0 "toca/tyre"			
 mapmodel 1 3 0 0 "toca/wheel"			
 mapmodel 3 3 0 0 "toca/utilitytable"		
 mapmodel 1 1 0 0 "toca/milkcarton"		
 mapmodel 0 0 0 0 "toca/bullet"			
 mapmodel 0 0 0 0 "toca/sgshell"			
 mapmodel 1 4 0 0 "nothing"			
-mapmodel 1 20 0 0 "toca/electricpole"		
+mapmodel 1 20 0 0 "nothing"		
 mapmodel 1 3 0 0 "toca/trashcan"		
 mapmodel 1 5 0 0 "toca/signs/target"		
 mapmodel 0 0 0 0 "toca/signs/toxic"		
 mapmodel 0 0 0 0 "toca/signs/radioactive"	
 mapmodel 0 0 0 0 "toca/signs/biohazard"		
-mapmodel 0 0 0 0 "toca/signs/resticted"		
+mapmodel 0 0 0 0 "toca/signs/restricted"		
 mapmodel 0 0 0 0 "toca/signs/firstaid"		
 mapmodel 0 0 0 0 "toca/signs/noentry"		
 mapmodel 0 0 0 0 "toca/signs/nosmoking"		
@@ -113,7 +113,7 @@ mapmodel 1 8 0 0 "toca/corrugated/beam"
 mapmodel 2 6 0 0 "toca/rack"
 mapmodel 2 2 0 0 "toca/airconditioner"
 mapmodel 2 2 0 0 "toca/airconditioner/interior"
-mapmodel 1 1 0 0 "toca/ceillingfan"
+mapmodel 1 1 0 0 "toca/ceilingfan"
 mapmodel 0 1 0 0 "ladder_rung"
 loadsky "textures/skymaps/socksky/nightball"
 texturereset
