--- a/ac/packages/maps/ac_shine.cfg
+++ b/ac/packages/maps/ac_shine.cfg
@@ -94,7 +94,7 @@ mapmodel 1 5 0 0 "toca/signs/target"
 mapmodel 0 0 0 0 "toca/signs/toxic"		
 mapmodel 0 0 0 0 "toca/signs/radioactive"	
 mapmodel 0 0 0 0 "toca/signs/biohazard"		
-mapmodel 0 0 0 0 "toca/signs/resticted"		
+mapmodel 0 0 0 0 "toca/signs/restricted"		
 mapmodel 0 0 0 0 "toca/signs/firstaid"		
 mapmodel 0 0 0 0 "toca/signs/noentry"		
 mapmodel 0 0 0 0 "toca/signs/nosmoking"		
