--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -100,14 +100,14 @@ mapmodel 1 1 0 0 "toca/securitycam/secucam"	//73
 //mapmodel 4 1 0 0 "toca/platform8"		//74
 mapmodel 4 1 0 0 "bridge"			//74  ------------
 
-mapmodel 1 8 0 0 "toca/wall"			//75
+mapmodel 1 8 0 0 "nothing"			//75 was: toca/wall
 mapmodel 0 0 0 0 "toca/guardrail"		//76
 
 mapmodel 1 3 0 0 "nothing"			//77 guardrail clipping xxxxxxxxxxxxxxxxx
 
 mapmodel 1 4 0 0 "toca/guardrail2"		//78
 mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//79
-mapmodel 2 1 0 0 "toca/tire"			//80
+mapmodel 2 1 0 0 "toca/tyre"			//80
 mapmodel 1 3 0 0 "toca/wheel"			//81
 mapmodel 3 3 0 0 "toca/utilitytable"		//82
 mapmodel 1 1 0 0 "toca/milkcarton"		//83
@@ -116,7 +116,7 @@ mapmodel 0 0 0 0 "toca/sgshell"			//85
 
 mapmodel 1 4 0 0 "nothing"			//86 guardrail2 clipping xxxxxxxxxxxxxxxx
 
-mapmodel 1 20 0 0 "toca/electricpole"		//87
+mapmodel 1 20 0 0 "nothing"		//87 was: toca/electricpole
 mapmodel 1 3 0 0 "toca/trashcan"		//88 
 mapmodel 1 5 0 0 "toca/signs/target"		//89
 mapmodel 0 0 0 0 "toca/signs/toxic"		//90
