fixing clipping for new-nothing-models
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3527 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_scaffold.cfg
+++ b/ac/packages/maps/ac_scaffold.cfg
@@ -63,9 +63,9 @@ mapmodel 3 7 0 0 "toca/radarconsole"
 mapmodel 1 7 0 0 "toca/commrack"		
 mapmodel 1 3 0 0 "toca/commrack2"		
 mapmodel 1 0 0 0 "toca/powermeter"		
-mapmodel 8 1 0 0 "nothing"		
-mapmodel 1 3 0 0 "nothing"		
-mapmodel 1 2 0 0 "nothing"		
+mapmodel 0 0 0 0 "nothing" // was: 8 1 0 0 toca/platform16	
+mapmodel 0 0 0 0 "nothing" // was: 1 3 0 0 toca/steeldrum
+mapmodel 0 0 0 0 "nothing" // was: 1 2 0 0 toca/steeldrum2
 mapmodel 1 2 0 0 "toca/trashbag"		
 mapmodel 1 2 0 0 "toca/computer/pc"		
 mapmodel 1 2 0 0 "toca/computer/monkeymou"	
@@ -76,7 +76,7 @@ mapmodel 1 1 0 0 "toca/securitycam/vertmount"
 mapmodel 1 1 0 0 "toca/securitycam/wallmount"	
 mapmodel 1 1 0 0 "toca/securitycam/secucam"	
 mapmodel 4 1 0 0 "bridge"		
-mapmodel 1 8 0 0 "nothing"			
+mapmodel 0 0 0 0 "nothing" // was: 1 8 0 0 toca/wall
 mapmodel 0 0 0 0 "toca/guardrail"		
 mapmodel 1 3 0 0 "nothing"			
 mapmodel 1 4 0 0 "toca/guardrail2"		
@@ -88,7 +88,7 @@ mapmodel 1 1 0 0 "toca/milkcarton"
 mapmodel 0 0 0 0 "toca/bullet"			
 mapmodel 0 0 0 0 "toca/sgshell"			
 mapmodel 1 4 0 0 "nothing"			
-mapmodel 1 20 0 0 "nothing"		
+mapmodel 0 0 0 0 "nothing" // was 1 20 0 0 toca/electricpole		
 mapmodel 1 3 0 0 "toca/trashcan"		
 mapmodel 1 5 0 0 "toca/signs/target"		
 mapmodel 0 0 0 0 "toca/signs/toxic"		
